--- a/rough_draft.tex
+++ b/rough_draft.tex
@@ -32,9 +32,12 @@
 
 \section{Introduction}
 
-Define vectors $\textbf{h}$, $\textbf{p}$ and matrix $\textbf{A}$. Let all $ h_i \in \textbf{h}$ be popular hashtags of 2017, so $\textbf{h}$ contains all major hashtags. Let all $p_i \in \textbf{p}$ describe the popularity of its corresponding hashtag $h_i$, so $\textbf{p}$ contains the popularity of the hashtags. Then let all vectors $\vec{a_i} \in \textbf{A}$ contain the accounts that retweeted hashtag $h_i$. Thus $a_{if}$ contains an account that retweeted $h_i$.\\
-\\
-For each $h_i$ find a coefficient $r_{ij} = r_{ji}$ describing the relatedness between the $h_i, h_j$. This coefficient should be calculated from how often accounts in $\vec{a_i}$ retweet $h_j$ and how often accounts in $\vec{a_j}$ retweet $h_i$. In other words, the coefficient ${r}_{ij}$ is determined is by looking at the overlap between $\vec{a_j}$ and $\vec{a_i}$. Using this coefficient, plot a network graph like the following:
+We would like to study how information spreads (or goes viral) on a social media. \\
+For simplicity, we will focus on Twitter data. \\
+We will use a modified version of the SEIZ model. Since, we would like to separate the susceptible population into two. The idea being that we think that the virality of certain 'events' is due to the fact that there are on-going discussion about topics around the event. 
+We should look at 2 cases, one with obvious discussion around it and one without, to see the difference.
+\\(MAKE SEIZ diagram)
+
 \begin{figure}[h]
 \caption{Example of Network Graph}
 \centering
@@ -59,6 +62,6 @@ Next we must try to describe the underlying diffusion between these ideas. The S
                                    \dot{Z} &= bS\frac{Z}{N} - \mu Z
   \end{cases}
 \]
-where $b$ and $\beta$ denote the per capita rates of idea rejection and adoption by susceptible respectively. $\Lambda$ is the recruitment rate, $
+where $b$ and $\beta$ denote the per capita rates of idea rejection and adoption by susceptible respectively. $\Lambda$ is the recruitment rate, 
 
 \end{document}
