proposal small updates

--- a/proposal.tex
+++ b/proposal.tex
@@ -74,8 +74,8 @@ T
 \section{References}
 \begin{enumerate}[label={[\arabic*]}]
 \item  L. Bettencourt, A. Cintron-Arias, D. I. Kaiser, and C. Castillo-Chavez. The power of a good idea: Quantitative modeling of the spread of ideas from epidemiological models. PHYSICA A, 364:513–536, 2006.
-\item F. Jin, E. Dougherty, P. Saraf, Y. Cao, N. Ramakrishnan. Epidemiological Modeling of News and Rumors on Twitter,SNAKDD '13 Proceedings of the 7th Workshop on Social Network Mining and Analysis
-Article No. 8 
-\item 
+\item F. Jin, E. Dougherty, P. Saraf, Y. Cao, N. Ramakrishnan. Epidemiological Modeling of News and Rumors on Twitter, SNAKDD '13 Proceedings of the 7th Workshop on Social Network Mining and Analysis
+Article No. 8.
+\item A. Javed. A Hybrid Approach to Semantic Hashtag Clustering in Social Media, Graduate College Dissertations and  theses, 2016.
 \end{enumerate}
 \end{document}
