--- a/proposal.tex
+++ b/proposal.tex
@@ -23,7 +23,7 @@
 \usetikzlibrary{arrows,automata}
 \section{Goal:}
 \begin{itemize}
-\item Our goal is to better understand how news spread on a social network, in our case we wish to focus on twitter. \\
+\item Our goal is to better understand how news spreads on a social network, in our case we wish to focus on twitter. \\
 We would like to apply a compartment model similar to the SIR model.
 \item Our question would be:
 \\ \textit{How does the existence of a susceptible population, with a history of infection by similar topics, modify the outbreak of a story on a social media?}
@@ -93,12 +93,14 @@ with,
 
 \end{itemize}
 \section{Expected Results}
-We expect the effect of the second population on the . 
+We expect to see outbreaks that happen earlier, are more intense and last longer when the second population. Since the second population will have a positive feedback on the first one, meaning that since the second population is more likely to get infected, the number of infectives will climb rapidly and therefore more and more individuals from the first population will be infected.
+
 \section{References}
 \begin{enumerate}[label={[\arabic*]}]
 \item  L. Bettencourt, A. Cintron-Arias, D. I. Kaiser, and C. Castillo-Chavez. The power of a good idea: Quantitative modeling of the spread of ideas from epidemiological models. PHYSICA A, 364:513–536, 2006.
 \item F. Jin, E. Dougherty, P. Saraf, Y. Cao, N. Ramakrishnan. Epidemiological Modeling of News and Rumors on Twitter, SNAKDD '13 Proceedings of the 7th Workshop on Social Network Mining and Analysis
 Article No. 8.
 \item A. Javed. A Hybrid Approach to Semantic Hashtag Clustering in Social Media, Graduate College Dissertations and  theses, 2016.
+\item J.M Heffernan, R.J Smith, L.M Wahl. Perspectives on the basic reproductive ratio, Published 22 September 2005.DOI: 10.1098/rsif.2005.0042.
 \end{enumerate}
 \end{document}
